# hanzi-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
hanziapp/: __init__.py  main.py
hanziapp/api/: __init__.py  app.py  container.py
hanziapp/api/routers/: __init__.py
hanziapp/api/routers/hanzi/: __init__.py  hanzi.py
hanziapp/config/: environment.py
hanziapp/core/hanzi/entities/: hanzi.py
hanziapp/core/hanzi/protocols/: __init__.py  hanzi_repo.py
hanziapp/core/hanzi/services/: hanzi_service.py
hanziapp/infra/broker/: celery.py
hanziapp/infra/cache/: memory.py  redis.py
hanziapp/infra/cache/repositories/: caching_hanzi_repository.py
hanziapp/infra/database/: sqlalchemy.py
hanziapp/infra/database/alembic/: env.py
hanziapp/infra/database/alembic/versions/: fd4ea7c08a33_create_hanzi_table.py
hanziapp/infra/database/models/: __init__.py  hanzi.py
hanziapp/infra/database/repositories/: database_hanzi_repository.py
scripts/: __init__.py
scripts/pgsql-db/: init_db.sql
